Ejercicio 3 realizado en la página web!!!!!

--- a/ArchivosEjecutables/index.html
+++ b/ArchivosEjecutables/index.html
@@ -55,6 +55,28 @@
     <h2>console.log(getFileExtension('index.html'));</h2>
     <h2>console.log(getFileExtension('webpack.config.js'));</h2>
 
+    <h2>/*</h2>
+
+    <h2>Exercise 3:</h2>
+    <h2>-----------</h2>
+   
+    <h2>Write a Javascript Program to replace every</h2>
+    <h2>character in a given string with the character</h2>
+    <h2>following it in the alphabet.</h2>
+    <h2>*/</h2>
+   
+    <h2>// String.fromCharCode</h2>
+    <h2>// charCodeAt</h2>
+   
+    <h2>const moveCharsForward = (str) =></h2>
+    <h2>str</h2>
+    <h2>.split('')</h2>
+    <h2>.map(char => String.fromCharCode(char.charCodeAt</h2>
+    <h2>(0) + 1))</h2>
+    <h2>.join('');</h2>
+   
+    <h2>console.log(moveCharsForward('abcd'));</h2>
+
     <script src="script.js"></script>
     
 </body>
